<resources>
    <string name="app_name">Another Jukebox</string>

    <string name="back"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <string name="start">Start</string>
    <string name="title_activity_jukebox_main">Another Jukebox</string>

    <!-- menu items -->
    <string name="app_settings">Settings</string>
    <string name="app_info_title">Info</string>
    <string name="app_copyright_title">Copyright</string>

    <!-- titles of main view pager tabs -->
    <string name="tab_title_artists">Artists</string>
    <string name="tab_title_albums">Albums</string>
    <string name="tab_title_songs">Songs</string>
    <string name="tab_title_player">Player</string>

    <!-- strings of 'Albums' fragment -->
    <string name="frag_albums_all_albums">All Albums</string>
    <string name="frag_albums_button_get_all_albums">Get all Albums</string>

</resources>
